// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQLLiveData Integration publishes patches on 'update' 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/0/numberOfCats",
        "value": 200,
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' 2`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/0/address",
        "value": "123 real st apt. 1",
      },
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/1/address",
        "value": "200 legit rd apt. 2",
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' with new list entries 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/0/numberOfCats",
        "value": 200,
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' with new list entries 2`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/0/address",
        "value": "123 real st apt. 1",
      },
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/1/address",
        "value": "200 legit rd apt. 2",
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes the initialQuery immediately 1`] = `
Object {
  "live": Object {
    "patch": null,
    "query": Object {
      "houses": Array [
        Object {
          "address": "123 real st",
          "id": "real_street",
          "numberOfCats": 5,
        },
        Object {
          "address": "200 legit rd",
          "id": "legit_road",
          "numberOfCats": 0,
        },
      ],
    },
  },
}
`;
